bumping up the font-size and making spacing more legible. fixes #1005

--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -6,7 +6,7 @@
   }
 
   li {
-    margin-bottom: map-get($spacers, 3);
+    margin-bottom: map-get($spacers, 4);
   }
 
   mark {
@@ -63,13 +63,20 @@
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
 }
 
+.dropdown-item {
+  font-size: 1.3rem;
+}
+
 .dropdown-item.arrow-focus {
-  //@extend .dropdown-item, :focus;
   background-color: $gray-100;
 }
 
+.dropdown-item:hover {
+  background: $gray-100;
+}
+
 .search-text-summary {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
 }
 
 .badge.search-filter-badge {
@@ -80,4 +87,9 @@
 
 #search-input {
   background-color: white;
+}
+
+.ais-Highlight {
+  font-size: 1.1rem;
+  font-weight: 500;
 }
